# featherflight-c-tiny

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean.bat
cmake/: readme.txt
make/linker/: COMMON.ld  FLASH.ld  MEMORY.ld  SECTION.ld
mdk/: c-copter.uvoptx  c-copter.uvprojx
mdk/RTE/_Target_1/: RTE_Components.h
src/: main.c
src/bsp/: stm32_it.c  system_stm32f30x.h
src/config/: board.h  chip.h  ff.param  version.c
src/driver/: battery.c  battery.h  dps280_linux.c  dps280_linux.h  flow_linux.c  flow_linux.h  hmc5883.c  hmc5883.h  i2c.c  i2c.h  led.c  led.h  motor.c  motor.h  mpu6050.c  mpu6050.h  mpu6050_linux.c  mpu6050_linux.h  ms5611.c  ms5611.h  serial.c  serial.h  spi.c  spi.h  spi_flash.c  spi_flash.h  spl06_linux.c  spl06_linux.h  timer.c  timer.h
src/link/: link_loglink.c  link_loglink.h  link_mavlink.c  link_mavlink.h  link_wwlink.c  link_wwlink.h  mavlink_log.c  mavlink_log.h  mavlink_param.c  mavlink_param.h
src/link/mavlink/: mavlink_conversions.h  mavlink_types.h  protocol.h
src/link/wwlink/: wwlink.h  wwlink_control.h  wwlink_crc.h  wwlink_helpers.h  wwlink_status.h  wwlink_system.h
src/mathlib/: dcm.c  dcm.h  mathlib.c  mathlib.h  matrix.c  matrix.h  quaternion.c  quaternion.h  srcdkf.c  srcdkf.h  vector.c  vector.h
src/modules/: cli.c  cli.h  debug.c  debug.h  failsafe.c  failsafe.h  log.c  log.h  log_messages.h  mtd.c  mtd.h  param.c  param.h  scheduler.c  scheduler.h
src/param/: readme.txt
src/pilot/: alt_control.c  alt_control.h  att_control.c  att_control.h  commander.c  commander.h  est.c  est.h  mixer.c  mixer.h  navigator.c  navigator.h  pilot.h  sensor.c  sensor.h
src/utils/: fifo.c  fifo.h  func_type.h  list.c  list.h  lpf.c  lpf.h  mm.c  mm.h  perf.c  perf.h  pid.c  pid.h  printf.c  printf.h  rotation.c  rotation.h  trigger.h  utils.h
tools/: astylerc  gen_debug_modules.bat  gen_debug_modules.py  gen_param.py  gen_param.sh  log_download.py  loglink.py  pilot_shell.py
(+23 files in other folders)
